Fix YAML syntax error in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: GitHub Copilot Documentation
 description: Complete documentation site for GitHub Copilot
-url: "https://ggdfbcvbd.github.io
+url: "https://ggdfbcvbd.github.io"
 baseurl: "/copilot-docs"
 theme: null
 plugins: []
